syntax = "proto3";

package stateService;

option go_package = "/stateService";

// The StateService RPC interface
service StateService {
  rpc select(SelectRequest) returns (Empty);
  rpc register(RegisterRequest) returns (Empty);
  rpc heartbeat(HeartbeatRequest) returns (Empty);
}

message Empty {}  

message SelectRequest {
    SelectDirection selectDirection = 1; 
}

enum SelectDirection {
    UP = 0;
    DOWN = 1;
}

message RegisterRequest {
  string motorName = 1;  // "R1A1"
  string host      = 2;  // "192.168.4.12"
  int32  port      = 3;  // 50050
}

message HeartbeatRequest {
  string motorName = 1;
}

message RobotInfo {
  string motorName = 1;
  string host      = 2;
  int32  port      = 3;
  bool   available = 4;  // true sobald alle 4 Achsen da
}
